# Coupling-Models

./: .gitignore  README.md
mnist_guidance/coupling_model/: README.md  benchmark_unet_guidance_speed.py  eval_cfg_sweep.py  eval_reward_guidance.py  finetune_generator_with_reward.py  one_step_mnist.py  pyproject.toml  train_reward_model.py
mnist_guidance/mdm_baseline/: README.md  __init__.py  eval_unet_mdm_cfg.py  eval_unet_mdm_classifier_guidance.py  finetune_unet_mdm_drakes.py  model.py  train_unet_mdm.py  unet_model.py  utils.py
one-step-DNA/: one_step_enhancer.py  transformer_flow.py
one-step-DNA/utils/: enhancer.py  enhancer_dataset.py  enhancer_external.py  enhancer_fbd.py  enhancer_models.py
one-step-text/: README.md  eval.py  prepare.py  pyproject.toml  requirements.txt  runtime_paths.py  train_stage_a.py  train_stage_b.py
one-step-text-lm1b/: .gitignore  README.md  conftest.py  eval.py  ltlm_lightning.py  prepare.py  pyproject.toml  requirements.txt  runtime_paths.py  stage_a_prior_sampling.py  train_stage_a.py  train_stage_b.py
one-step-text-lm1b/configs/: stage_a.yaml  stage_b.yaml
one-step-text-lm1b/scripts/: run.sh  run_pipeline.sh  setup_env.sh
one-step-text/configs/: stage_a.yaml  stage_b.yaml  stage_b_mdm.yaml
