[project]
name = "latent-transport-lm"
version = "0.1.0"
description = "Single-pass latent transport language model experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5",
    "torch==2.7.0",
    "triton==3.3.0; sys_platform == 'linux'",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "datasets>=2.14",
    "transformers>=4.30",
    "wandb>=0.17",
    "torchdata>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
triton = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
